[package]
name = "tletools"
version = "0.1.0"
description = "Library to work with two-line element set files"
authors = ["Federico Stra <stra.federico@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3.5"
itertools = "0.10.3"
# rust-tle = { git = "https://github.com/pbrandt1/rust-tle", package = "tle" }
tle-parser = "0.1.3"

[[bench]]
name = "compare"
harness = false
