[package]
name = "tletools"
version = "0.1.0"
description = "Library to work with two-line element set files"
authors = ["Federico Stra <stra.federico@gmail.com>"]
license = "MIT"
repository = "https://github.com/FedericoStra/tletools-rs"
categories = [
    "aerospace",
    "aerospace::space-protocols",
    "parser-implementations",
    "science",
]
keywords = ["tle"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { version = "7.1.0", optional = true, default-features = false }
thiserror = { version = "1.0.30", optional = true }
num-traits = { version = "0.2", default-features = false }
cfg-if = "1.0"

[dev-dependencies]
criterion = "0.3.5"
itertools = "0.10.3"
serde_json = "1.0.79"
sgp4 = "0.5.0"
# rust-tle = { git = "https://github.com/pbrandt1/rust-tle", package = "tle" }
tle-parser = "0.1.3"

[[bench]]
name = "compare"
harness = false

# docs.rs specific configuration
[package.metadata.docs.rs]
all-features = true
# rustdoc-args = ["--cfg", "docsrs"]


[features]
default = ["std"]
std = ["dep:thiserror"]
